<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#380E00"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introText"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginTop="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle1"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introSubtitle2"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="15sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageDescription"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                style="android:style/Widget.Button"
                android:background="@drawable/black_bg"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/registerBtn"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
